// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders RDS for mysql 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_vpc\\": {
      \\"testRDSMysql_vpc_0F718DFC\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"rug\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSMysql/vpc\\",
            \\"uniqueId\\": \\"testRDSMysql_vpc_0F718DFC\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_security_group\\": {
      \\"testRDSMysql_rds_security_group_9F25C5EA\\": {
        \\"description\\": \\"Managed by Terraform\\",
        \\"egress\\": [
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": \\"required\\",
            \\"from_port\\": 0,
            \\"ipv6_cidr_blocks\\": [],
            \\"prefix_list_ids\\": [],
            \\"protocol\\": \\"-1\\",
            \\"security_groups\\": [],
            \\"self\\": null,
            \\"to_port\\": 0
          }
        ],
        \\"ingress\\": [
          {
            \\"cidr_blocks\\": [
              \\"\${data.aws_vpc.testRDSMysql_vpc_0F718DFC.cidr_block}\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 3306,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"tcp\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 3306
          }
        ],
        \\"name_prefix\\": \\"bowling-\\",
        \\"vpc_id\\": \\"\${data.aws_vpc.testRDSMysql_vpc_0F718DFC.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSMysql/rds_security_group\\",
            \\"uniqueId\\": \\"testRDSMysql_rds_security_group_9F25C5EA\\"
          }
        }
      }
    },
    \\"aws_db_subnet_group\\": {
      \\"testRDSMysql_rds_subnet_group_436C9689\\": {
        \\"name_prefix\\": \\"bowling-\\",
        \\"subnet_ids\\": [
          \\"0\\",
          \\"1\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSMysql/rds_subnet_group\\",
            \\"uniqueId\\": \\"testRDSMysql_rds_subnet_group_436C9689\\"
          }
        }
      }
    },
    \\"aws_rds_cluster\\": {
      \\"testRDSMysql_rds_cluster_FBC506B5\\": {
        \\"cluster_identifier_prefix\\": \\"bowling-\\",
        \\"copy_tags_to_snapshot\\": true,
        \\"database_name\\": \\"walter\\",
        \\"db_subnet_group_name\\": \\"\${aws_db_subnet_group.testRDSMysql_rds_subnet_group_436C9689.name}\\",
        \\"engine\\": \\"aurora-mysql\\",
        \\"master_password\\": \\"bowling\\",
        \\"master_username\\": \\"walter\\",
        \\"vpc_security_group_ids\\": [
          \\"\${aws_security_group.testRDSMysql_rds_security_group_9F25C5EA.id}\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"master_username\\",
            \\"master_password\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSMysql/rds_cluster\\",
            \\"uniqueId\\": \\"testRDSMysql_rds_cluster_FBC506B5\\"
          }
        }
      }
    },
    \\"aws_secretsmanager_secret\\": {
      \\"testRDSMysql_rds_secret_4844BE15\\": {
        \\"description\\": \\"Secret For \${aws_rds_cluster.testRDSMysql_rds_cluster_FBC506B5.cluster_identifier}\\",
        \\"name\\": \\"bowling-/\${aws_rds_cluster.testRDSMysql_rds_cluster_FBC506B5.cluster_identifier}\\",
        \\"depends_on\\": [
          \\"aws_rds_cluster.testRDSMysql_rds_cluster_FBC506B5\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSMysql/rds_secret\\",
            \\"uniqueId\\": \\"testRDSMysql_rds_secret_4844BE15\\"
          }
        }
      }
    },
    \\"aws_secretsmanager_secret_version\\": {
      \\"testRDSMysql_rds_secret_version_D9E2E204\\": {
        \\"secret_id\\": \\"\${aws_secretsmanager_secret.testRDSMysql_rds_secret_4844BE15.id}\\",
        \\"secret_string\\": \\"{\\\\\\"engine\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSMysql_rds_cluster_FBC506B5.engine}\\\\\\",\\\\\\"host\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSMysql_rds_cluster_FBC506B5.endpoint}\\\\\\",\\\\\\"username\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSMysql_rds_cluster_FBC506B5.master_username}\\\\\\",\\\\\\"password\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSMysql_rds_cluster_FBC506B5.master_password}\\\\\\",\\\\\\"dbname\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSMysql_rds_cluster_FBC506B5.database_name}\\\\\\",\\\\\\"port\\\\\\":3306}\\",
        \\"depends_on\\": [
          \\"aws_secretsmanager_secret.testRDSMysql_rds_secret_4844BE15\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSMysql/rds_secret_version\\",
            \\"uniqueId\\": \\"testRDSMysql_rds_secret_version_D9E2E204\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders RDS without tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_vpc\\": {
      \\"testRDSClusterNoTags_vpc_C1E8C7A8\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"rug\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSClusterNoTags/vpc\\",
            \\"uniqueId\\": \\"testRDSClusterNoTags_vpc_C1E8C7A8\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_security_group\\": {
      \\"testRDSClusterNoTags_rds_security_group_18A73219\\": {
        \\"description\\": \\"Managed by Terraform\\",
        \\"egress\\": [
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": \\"required\\",
            \\"from_port\\": 0,
            \\"ipv6_cidr_blocks\\": [],
            \\"prefix_list_ids\\": [],
            \\"protocol\\": \\"-1\\",
            \\"security_groups\\": [],
            \\"self\\": null,
            \\"to_port\\": 0
          }
        ],
        \\"ingress\\": [
          {
            \\"cidr_blocks\\": [
              \\"\${data.aws_vpc.testRDSClusterNoTags_vpc_C1E8C7A8.cidr_block}\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 3306,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"tcp\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 3306
          }
        ],
        \\"name_prefix\\": \\"bowling-\\",
        \\"vpc_id\\": \\"\${data.aws_vpc.testRDSClusterNoTags_vpc_C1E8C7A8.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSClusterNoTags/rds_security_group\\",
            \\"uniqueId\\": \\"testRDSClusterNoTags_rds_security_group_18A73219\\"
          }
        }
      }
    },
    \\"aws_db_subnet_group\\": {
      \\"testRDSClusterNoTags_rds_subnet_group_465E71B0\\": {
        \\"name_prefix\\": \\"bowling-\\",
        \\"subnet_ids\\": [
          \\"0\\",
          \\"1\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSClusterNoTags/rds_subnet_group\\",
            \\"uniqueId\\": \\"testRDSClusterNoTags_rds_subnet_group_465E71B0\\"
          }
        }
      }
    },
    \\"aws_rds_cluster\\": {
      \\"testRDSClusterNoTags_rds_cluster_23E2E03B\\": {
        \\"cluster_identifier_prefix\\": \\"bowling-\\",
        \\"copy_tags_to_snapshot\\": true,
        \\"database_name\\": \\"walter\\",
        \\"db_subnet_group_name\\": \\"\${aws_db_subnet_group.testRDSClusterNoTags_rds_subnet_group_465E71B0.name}\\",
        \\"master_password\\": \\"bowling\\",
        \\"master_username\\": \\"walter\\",
        \\"vpc_security_group_ids\\": [
          \\"\${aws_security_group.testRDSClusterNoTags_rds_security_group_18A73219.id}\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"master_username\\",
            \\"master_password\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSClusterNoTags/rds_cluster\\",
            \\"uniqueId\\": \\"testRDSClusterNoTags_rds_cluster_23E2E03B\\"
          }
        }
      }
    },
    \\"aws_secretsmanager_secret\\": {
      \\"testRDSClusterNoTags_rds_secret_17BCD98A\\": {
        \\"description\\": \\"Secret For \${aws_rds_cluster.testRDSClusterNoTags_rds_cluster_23E2E03B.cluster_identifier}\\",
        \\"name\\": \\"bowling-/\${aws_rds_cluster.testRDSClusterNoTags_rds_cluster_23E2E03B.cluster_identifier}\\",
        \\"depends_on\\": [
          \\"aws_rds_cluster.testRDSClusterNoTags_rds_cluster_23E2E03B\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSClusterNoTags/rds_secret\\",
            \\"uniqueId\\": \\"testRDSClusterNoTags_rds_secret_17BCD98A\\"
          }
        }
      }
    },
    \\"aws_secretsmanager_secret_version\\": {
      \\"testRDSClusterNoTags_rds_secret_version_C8E77601\\": {
        \\"secret_id\\": \\"\${aws_secretsmanager_secret.testRDSClusterNoTags_rds_secret_17BCD98A.id}\\",
        \\"secret_string\\": \\"{\\\\\\"engine\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSClusterNoTags_rds_cluster_23E2E03B.engine}\\\\\\",\\\\\\"host\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSClusterNoTags_rds_cluster_23E2E03B.endpoint}\\\\\\",\\\\\\"username\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSClusterNoTags_rds_cluster_23E2E03B.master_username}\\\\\\",\\\\\\"password\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSClusterNoTags_rds_cluster_23E2E03B.master_password}\\\\\\",\\\\\\"dbname\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSClusterNoTags_rds_cluster_23E2E03B.database_name}\\\\\\",\\\\\\"port\\\\\\":3306}\\",
        \\"depends_on\\": [
          \\"aws_secretsmanager_secret.testRDSClusterNoTags_rds_secret_17BCD98A\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSClusterNoTags/rds_secret_version\\",
            \\"uniqueId\\": \\"testRDSClusterNoTags_rds_secret_version_C8E77601\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a RDS cluster 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_vpc\\": {
      \\"testRDSCluster_vpc_F47EEEFE\\": {
        \\"filter\\": [
          {
            \\"name\\": \\"vpc-id\\",
            \\"values\\": [
              \\"rug\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSCluster/vpc\\",
            \\"uniqueId\\": \\"testRDSCluster_vpc_F47EEEFE\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_security_group\\": {
      \\"testRDSCluster_rds_security_group_4A9D257E\\": {
        \\"description\\": \\"Managed by Terraform\\",
        \\"egress\\": [
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": \\"required\\",
            \\"from_port\\": 0,
            \\"ipv6_cidr_blocks\\": [],
            \\"prefix_list_ids\\": [],
            \\"protocol\\": \\"-1\\",
            \\"security_groups\\": [],
            \\"self\\": null,
            \\"to_port\\": 0
          }
        ],
        \\"ingress\\": [
          {
            \\"cidr_blocks\\": [
              \\"\${data.aws_vpc.testRDSCluster_vpc_F47EEEFE.cidr_block}\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 3306,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"tcp\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 3306
          }
        ],
        \\"name_prefix\\": \\"bowling-\\",
        \\"vpc_id\\": \\"\${data.aws_vpc.testRDSCluster_vpc_F47EEEFE.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSCluster/rds_security_group\\",
            \\"uniqueId\\": \\"testRDSCluster_rds_security_group_4A9D257E\\"
          }
        }
      }
    },
    \\"aws_db_subnet_group\\": {
      \\"testRDSCluster_rds_subnet_group_88022457\\": {
        \\"name_prefix\\": \\"bowling-\\",
        \\"subnet_ids\\": [
          \\"0\\",
          \\"1\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSCluster/rds_subnet_group\\",
            \\"uniqueId\\": \\"testRDSCluster_rds_subnet_group_88022457\\"
          }
        }
      }
    },
    \\"aws_rds_cluster\\": {
      \\"testRDSCluster_rds_cluster_B5FD08B5\\": {
        \\"cluster_identifier_prefix\\": \\"bowling-\\",
        \\"copy_tags_to_snapshot\\": true,
        \\"database_name\\": \\"walter\\",
        \\"db_subnet_group_name\\": \\"\${aws_db_subnet_group.testRDSCluster_rds_subnet_group_88022457.name}\\",
        \\"master_password\\": \\"bowling\\",
        \\"master_username\\": \\"walter\\",
        \\"tags\\": {
          \\"whodis\\": \\"walter\\"
        },
        \\"vpc_security_group_ids\\": [
          \\"\${aws_security_group.testRDSCluster_rds_security_group_4A9D257E.id}\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"master_username\\",
            \\"master_password\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSCluster/rds_cluster\\",
            \\"uniqueId\\": \\"testRDSCluster_rds_cluster_B5FD08B5\\"
          }
        }
      }
    },
    \\"aws_secretsmanager_secret\\": {
      \\"testRDSCluster_rds_secret_A2014138\\": {
        \\"description\\": \\"Secret For \${aws_rds_cluster.testRDSCluster_rds_cluster_B5FD08B5.cluster_identifier}\\",
        \\"name\\": \\"bowling-/\${aws_rds_cluster.testRDSCluster_rds_cluster_B5FD08B5.cluster_identifier}\\",
        \\"depends_on\\": [
          \\"aws_rds_cluster.testRDSCluster_rds_cluster_B5FD08B5\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSCluster/rds_secret\\",
            \\"uniqueId\\": \\"testRDSCluster_rds_secret_A2014138\\"
          }
        }
      }
    },
    \\"aws_secretsmanager_secret_version\\": {
      \\"testRDSCluster_rds_secret_version_55C44893\\": {
        \\"secret_id\\": \\"\${aws_secretsmanager_secret.testRDSCluster_rds_secret_A2014138.id}\\",
        \\"secret_string\\": \\"{\\\\\\"engine\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSCluster_rds_cluster_B5FD08B5.engine}\\\\\\",\\\\\\"host\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSCluster_rds_cluster_B5FD08B5.endpoint}\\\\\\",\\\\\\"username\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSCluster_rds_cluster_B5FD08B5.master_username}\\\\\\",\\\\\\"password\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSCluster_rds_cluster_B5FD08B5.master_password}\\\\\\",\\\\\\"dbname\\\\\\":\\\\\\"\${aws_rds_cluster.testRDSCluster_rds_cluster_B5FD08B5.database_name}\\\\\\",\\\\\\"port\\\\\\":3306}\\",
        \\"depends_on\\": [
          \\"aws_secretsmanager_secret.testRDSCluster_rds_secret_A2014138\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testRDSCluster/rds_secret_version\\",
            \\"uniqueId\\": \\"testRDSCluster_rds_secret_version_55C44893\\"
          }
        }
      }
    }
  }
}"
`;
